Fix: Some visibility issues arising from recent CEMAC themes.

--- a/bungeni_custom/trunk/themes/gq/css/skin.css
+++ b/bungeni_custom/trunk/themes/gq/css/skin.css
@@ -1215,6 +1215,15 @@ div.main-column #collage h2 {
 .template-workspace #portal-logo img {
     border: 0 none;
 }
+.template-workspace #top-layer ul#portal-personaltools li a:hover {
+    color: #fffd6e !important;
+}
+.template-workspace #top-layer ul#portal-languageselector li a:hover {
+    color: #fffd6e !important;
+}
+.template-workspace #top-layer ul#portal-languageselector li.selected a:hover {
+    color: #000000;
+}
 
 /*
  * Breadcrumbs
